<resources>
    <string name="app_name">REACT</string>
    <string name="message_error_opening_db">An error occured while trying to open the database</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="label_name">Name</string>
    <string name="label_permid">Perm ID</string>
    <string name="label_dob">date of birth</string>
    <string name="label_household_number">Household Number</string>
    <string name="label_mother_name">Mother Name</string>
    <string name="label_address">Address</string>
    <string name="label_address_contact_info">Address and contact information</string>
    <string name="label_cellphone">Cellphone</string>
    <string name="label_neighbour_phone">Neighbour Phone</string>
    <string name="label_other_info">Other Info</string>
    <string name="label_additional_info">Additional Info</string>
    <string name="label_neighbor_name">Neighbor name</string>
    <string name="label_household_head">Household Head Name</string>

    <string name="label_members">Member(s)</string>
    <string name="label_households">Household(s)</string>
    <string name="label_add">Add</string>
    <string name="label_search">Search</string>

    <string name="label_follow_case">Follow Case</string>

    <string name="label_odk_warning">Couldnt open Form</string>
    <string name="label_odk_unfinished_form">Form not finished, will be deleted</string>

    <string name="label_downloading">Downloading...</string>
    <string name="label_connecting">Connecting...</string>
    <string name="label_saving">Saving...</string>
    <string name="label_records">Records...</string>
</resources>